make hires stats component responsive

--- a/app/views/dashboard/overview/hires/_hires-stats.html.slim
+++ b/app/views/dashboard/overview/hires/_hires-stats.html.slim
@@ -1,22 +1,22 @@
 div class="hires-stats_container mb-1"
     div class="row"
-        div class="col-12 col-md-8"
+        div class="col-7 d-flex justify-content-center"
             div class="hires-stats_component"
                 div class="hires-stats_stat"
                     h1 class="hires-stats_number" 45
-                    p class="hires-stats_stat-text" hires
-                h4 class="hires-stats_description" avg per month
-        div class="col-12 col-md-4"
+                    p class="hires-stats_stat-text" avg
+                h4 class="hires-stats_description" hires per month
+        div class="col-5 d-flex justify-content-center"
             <i class="material-icons hires-stats_icon">trending_up</i>
         
 
 div class="hires-stats_container"
     div class="row"
-        div class="col-12 col-md-8"
+        div class="col-7 d-flex justify-content-center"
             div class="hires-stats_component"
                 div class="hires-stats_stat"
                     h1 class="hires-stats_number" 30
-                    p class="hires-stats_stat-text" hires
-                h4 class="hires-stats_description" median per month
-        div class="col-12 col-md-4"
+                    p class="hires-stats_stat-text" med
+                h4 class="hires-stats_description" hires per month
+        div class="col-5 d-flex justify-content-center"
             <i class="material-icons hires-stats_icon">equalizer</i>
