--- a/app/assets/stylesheets/_hires.scss
+++ b/app/assets/stylesheets/_hires.scss
@@ -16,29 +16,30 @@
 }
 
 .hires-stats_number{
-    font-size: 2.3rem !important;
+    font-size: 2rem !important;
     font-weight: 500;
     width: fit-content;
 }
 
 .hires-stats_stat-text{
-    font-size: 1.1rem !important;
+    font-size: 1rem !important;
     width: fit-content;
     margin-bottom: .7rem;
     font-family: sans-serif;
     align-self: flex-end;
     margin-left: 1rem;
+    font-weight: 500;
 }
 
 .hires-stats_date{
     margin-bottom: 0;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 300;
 }
 
 
 .hires-stats_description{
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: 300;
 }
 
@@ -53,5 +54,5 @@
 
 
 .hires-stats_icon{
-    font-size: 4rem;
+    font-size: 3.5rem;
 }
