add method that calculates median number of hires per month

--- a/app/assets/stylesheets/_hires.scss
+++ b/app/assets/stylesheets/_hires.scss
@@ -32,9 +32,8 @@
 }
 
 .hires-stats_date{
-    margin-bottom: 0;
-    font-size: 1rem;
-    font-weight: 300;
+    margin-top: 1rem;
+    text-align: center;
 }
 
 
