--- a/app/views/dashboard/overview/hires/_hires-stats.html.slim
+++ b/app/views/dashboard/overview/hires/_hires-stats.html.slim
@@ -3,7 +3,7 @@ div class="hires-stats_container mb-1"
         div class="col-7 d-flex justify-content-center"
             div class="hires-stats_component"
                 div class="hires-stats_stat"
-                    h1 class="hires-stats_number" 45
+                    h1 class="hires-stats_number" #{hires_statistics(current: true)[:average]}
                     p class="hires-stats_stat-text" avg
                 h4 class="hires-stats_description" hires per month
         div class="col-5 d-flex justify-content-center"
@@ -15,8 +15,9 @@ div class="hires-stats_container"
         div class="col-7 d-flex justify-content-center"
             div class="hires-stats_component"
                 div class="hires-stats_stat"
-                    h1 class="hires-stats_number" 30
+                    h1 class="hires-stats_number" #{hires_statistics(current: true)[:median]}
                     p class="hires-stats_stat-text" med
                 h4 class="hires-stats_description" hires per month
         div class="col-5 d-flex justify-content-center"
             <i class="material-icons hires-stats_icon">equalizer</i>
+p class="hires-stats_date" #{hires_statistics(current: true)[:date]}
