--- a/app/views/dashboard/overview/hires/_hires-stats.html.slim
+++ b/app/views/dashboard/overview/hires/_hires-stats.html.slim
@@ -1,3 +1,4 @@
+p class="hires-stats_date mb-1" #{hires_statistics(current: true)[:date]}
 div class="hires-stats_container mb-1"
     div class="row"
         div class="col-7 d-flex justify-content-center"
@@ -20,4 +21,3 @@ div class="hires-stats_container"
                 h4 class="hires-stats_description" hires per month
         div class="col-5 d-flex justify-content-center"
             <i class="material-icons hires-stats_icon">equalizer</i>
-p class="hires-stats_date" #{hires_statistics(current: true)[:date]}
