--- a/app/assets/stylesheets/_gauge.scss
+++ b/app/assets/stylesheets/_gauge.scss
@@ -33,5 +33,12 @@
   text-align: center;
 }
 
+.gauge-date{
+    text-align: center;
+    color: white;
+    padding: .5rem;
+    background-color: map-get($plated-secondary-palette, "blueberry-pie");
+}
+
 
 
