--- a/app/views/dashboard/overview/offers/_month-year-offer-acceptance-ratio-date.html.slim
+++ b/app/views/dashboard/overview/offers/_month-year-offer-acceptance-ratio-date.html.slim
@@ -1,1 +1,1 @@
-p class="text-center mt-4" id="offer-acceptance-ratio_date" #{offer_acceptance_ratio_data_for_month_in_year(current: true)[:date]}
+p class="mt-4 gauge-date" id="offer-acceptance-ratio_date" #{offer_acceptance_ratio_data_for_month_in_year(current: true)[:date]}
