make json.jbuilder file for hires controller

--- a/app/assets/stylesheets/_gauge.scss
+++ b/app/assets/stylesheets/_gauge.scss
@@ -37,7 +37,8 @@
     text-align: center;
     color: white;
     padding: .5rem;
-    background-color: map-get($plated-secondary-palette, "blueberry-pie");
+    // background-color: map-get($plated-secondary-palette, "blueberry-pie");
+    background-color: #676767;
 }
 
 
