--- a/app/assets/stylesheets/_hires.scss
+++ b/app/assets/stylesheets/_hires.scss
@@ -32,8 +32,8 @@
 }
 
 .hires-stats_date{
-    background-color: map-get($plated-secondary-palette, "blueberry-pie");
-    // background-color: #2076b3;
+    // background-color: map-get($plated-secondary-palette, "blueberry-pie");
+    background-color: #676767;
     color: white;
     padding: .5rem;
     text-align: center;
