--- a/app/views/dashboard/overview/hires/_hires-stats-control.html.slim
+++ b/app/views/dashboard/overview/hires/_hires-stats-control.html.slim
@@ -1,7 +1,7 @@
 div class="container-fluid mb-3 px-0"
     div class="row"
         div class="col-12 d-flex justify-content-end"
-            form id="years-months-hires_form"                
+            form id="hires-stats_form"                
                 div class="dropdown ml-2"
                     button class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" Year
                     div class="dropdown-menu dropdown-menu-right"
