add statistics update functionality

--- a/app/views/dashboard/overview/hires/_hires-stats-control.html.slim
+++ b/app/views/dashboard/overview/hires/_hires-stats-control.html.slim
@@ -14,4 +14,4 @@ div class="container-fluid mb-3 px-0"
                                         input type="radio" class="custom-control-input" value="#{year}" id="#{year}-3" name="year"
                                     label class="custom-control-label" for="#{year}-3" #{year}
             div
-                button type="submit" id="years-months-hires_submit" class="btn btn-primary button--submit ml-2" Apply
+                button type="submit" id="hires-stats_submit" class="btn btn-primary button--submit ml-2" Apply
