add tooltips for graphs

--- a/app/views/dashboard/overview/offers/_month-year-offer-acceptance-ratio-control.html.slim
+++ b/app/views/dashboard/overview/offers/_month-year-offer-acceptance-ratio-control.html.slim
@@ -2,7 +2,9 @@
 form id="month-year-offer-acceptance-ratio_form"
     div class="container-fluid px-0"
         div class="row"
-            div class="col-12 d-flex justify-content-end"
+            div class="col-12 col-sm-2"
+                <i class="material-icons charts_info-tooltip" data-toggle="tooltip" data-placement="right" title="Offer acceptance ratio for given month and year.">help_outline</i>
+            div class="col-12 col-sm-10 d-flex justify-content-end"
                 div class="dropdown mr-1"
                     button class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" Month
                     div class="dropdown-menu dropdown-menu-right dashboard_month-dropdown"
