--- a/app/views/dashboard/overview/offers/_offer-acceptance-ratios-control.html.slim
+++ b/app/views/dashboard/overview/offers/_offer-acceptance-ratios-control.html.slim
@@ -1,10 +1,9 @@
 form id="offer-acceptance-ratios_form"
     div class="container mb-3 px-0"
-        / h4 Offer acceptance ratios
         div class="row"
-            div class="col-12 col-sm-5"
-                / h4 Offer acceptance ratios
-            div class="col-12 col-sm-7 d-flex justify-content-end"
+            div class="col-12 col-sm-2"
+                <i class="material-icons charts_info-tooltip" data-toggle="tooltip" data-placement="right" title="Offer acceptance ratio per month.">help_outline</i>
+            div class="col-12 col-sm-10 d-flex justify-content-end"
                 div class="dropdown ml-2"
                     button class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" Years
                     div class="dropdown-menu dropdown-menu-right"
