--- a/app/assets/stylesheets/_charts.scss
+++ b/app/assets/stylesheets/_charts.scss
@@ -1,7 +1,17 @@
 .charts_date{
-    background-color: #676767;
+    background-color: map-get($plated-secondary-palette, "blueberry-pie");
     color: white;
     padding: .5rem;
     text-align: center;
     margin-bottom: 0;
+}
+
+.charts_info-tooltip{
+    margin-bottom: 1rem;
+    color: rgb(168, 168, 168);
+}
+
+.charts_info-tooltip:hover{
+    color: black;
+    cursor: pointer;
 }
