--- a/app/views/dashboard/overview/hires/_hires-stats-control.html.slim
+++ b/app/views/dashboard/overview/hires/_hires-stats-control.html.slim
@@ -1,6 +1,8 @@
 div class="container-fluid mb-3 px-0"
     div class="row"
-        div class="col-12 d-flex justify-content-end"
+        div class="col-12 col-sm-2"
+            <i class="material-icons charts_info-tooltip" data-toggle="tooltip" data-placement="right" title="Average and median # of hires/month for given year.">help_outline</i>
+        div class="col-12 col-sm-10 d-flex justify-content-end"
             form id="hires-stats_form"                
                 div class="dropdown ml-2"
                     button class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" Year
