--- a/app/views/dashboard/overview/hires/_years-control.html.slim
+++ b/app/views/dashboard/overview/hires/_years-control.html.slim
@@ -2,9 +2,9 @@
 form id="years-hires_form"
     div class="container-fluid mb-3 px-0"
         div class="row"
-            div class="col-12 col-sm-5"
-                / h4 Hires per year
-            div class="col-12 col-sm-7 d-flex justify-content-end"
+            div class="col-12 col-sm-2"
+                <i class="material-icons charts_info-tooltip" data-toggle="tooltip" data-placement="right" title="Hires per year.">help_outline</i>
+            div class="col-12 col-sm-10 d-flex justify-content-end"
                 div class="dropdown ml-2"
                     button class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" Years
                     div class="dropdown-menu dropdown-menu-right"
