--- a/app/views/dashboard/overview/hires/_years-months-control.html.slim
+++ b/app/views/dashboard/overview/hires/_years-months-control.html.slim
@@ -1,6 +1,8 @@
 div class="container-fluid mb-3 px-0"
     div class="row"
-        div class="col-12 d-flex justify-content-end"
+        div class="col-12 col-sm-2"
+            <i class="material-icons charts_info-tooltip" data-toggle="tooltip" data-placement="right" title="Hires per month.">help_outline</i>
+        div class="col-12 col-sm-10 d-flex justify-content-end"
             div class="dropdown"
                 button class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" Type
                 div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton"
