--- a/app/assets/stylesheets/_charts.scss
+++ b/app/assets/stylesheets/_charts.scss
@@ -15,3 +15,42 @@
     color: black;
     cursor: pointer;
 }
+
+.graph-status_bubbles{
+    display: flex;
+    flex-direction: row;
+    height: 1rem;
+    justify-content: center;
+    margin-top: 2rem;
+}
+
+@keyframes bubble{
+    0% {opacity: .2;}
+    25% {opacity: .4;}
+    50% {opacity: .6;}
+    75% {opacity: .8;}
+    100% {opacity: 1;}
+}
+
+.graph-status_bubble{
+    height: 1rem;
+    width: 1rem;
+    background-color: map-get($plated-secondary-palette, "dinosaur-kale");
+    border-radius: 50%;
+    animation-name: bubble;
+    animation-duration: 1s;
+    animation-iteration-count: 4;
+    opacity: .2;
+}
+
+.graph-status_bubble-2{
+    margin: 0 1rem;
+    animation-delay: .33s;
+}
+
+.graph-status_bubble-3{
+    animation-delay: .66s;
+}
+
+
+
