--- a/app/views/dashboard/overview/hires/_years-months-graph.html.slim
+++ b/app/views/dashboard/overview/hires/_years-months-graph.html.slim
@@ -1,3 +1,6 @@
-div id="years-months-hires_container" style="height: 20rem"
+div id="years-months-hires_container"
     = render_hires_years_months(@graph_type, @years_v1)
-    
+div class="graph-status_bubbles" id="graph-status_hires-years-months"
+    div class="graph-status_bubble graph-status_bubble-1"
+    div class="graph-status_bubble graph-status_bubble-2"
+    div class="graph-status_bubble graph-status_bubble-3"
