--- a/app/views/dashboard/overview/hires/_hires-stats.html.slim
+++ b/app/views/dashboard/overview/hires/_hires-stats.html.slim
@@ -21,3 +21,8 @@ div class="hires-stats_container mb-1"
         div class="col-5 d-flex justify-content-center"
             <i class="material-icons hires-stats_icon">equalizer</i>
 p class="charts_date" id="hires-stats_date" #{hires_statistics(current: true)[:date]}
+
+div class="chart-status_bubbles" id="chart-status_hires-stats"
+    div class="chart-status_bubble chart-status_bubble-1"
+    div class="chart-status_bubble chart-status_bubble-2"
+    div class="chart-status_bubble chart-status_bubble-3"
