--- a/app/views/dashboard/overview/hires/_years-graph.html.slim
+++ b/app/views/dashboard/overview/hires/_years-graph.html.slim
@@ -1,4 +1,6 @@
 div
     = render_hires_ordered_by_years(@years_v2)
-div class="graph-status_dots--stable" id="graph-status"
-    div 
+div class="chart-status_bubbles" id="chart-status_hires-years"
+    div class="chart-status_bubble chart-status_bubble-1"
+    div class="chart-status_bubble chart-status_bubble-2"
+    div class="chart-status_bubble chart-status_bubble-3"
