--- a/app/views/dashboard/overview/offers/_month-year-offer-acceptance-ratio-date.html.slim
+++ b/app/views/dashboard/overview/offers/_month-year-offer-acceptance-ratio-date.html.slim
@@ -1,1 +1,5 @@
 p class="mt-4 charts_date" id="offer-acceptance-ratio_date" #{offer_acceptance_ratio_data_for_month_in_year(current: true)[:date]}
+div class="chart-status_bubbles" id="chart-status_offer-ratio-month-year"
+    div class="chart-status_bubble chart-status_bubble-1"
+    div class="chart-status_bubble chart-status_bubble-2"
+    div class="chart-status_bubble chart-status_bubble-3"
