conditionally render table info based on screen size

--- a/app/assets/stylesheets/_charts.scss
+++ b/app/assets/stylesheets/_charts.scss
@@ -35,7 +35,7 @@
 .chart-status_bubble{
     height: 1rem;
     width: 1rem;
-    background-color: map-get($plated-secondary-palette, "dinosaur-kale");
+    background-color: map-get($plated-secondary-palette, "peach-fuzz");
     border-radius: 50%;
     animation-name: bubble;
     animation-duration: 1s;
