--- a/app/views/dashboard/overview/index.html.slim
+++ b/app/views/dashboard/overview/index.html.slim
@@ -7,7 +7,7 @@ div class="mb-4"
                 div class="dashboard_content-container"    
                     = render 'dashboard/overview/hires/years-months-control'
                     = render 'dashboard/overview/hires/years-months-graph'
-        div class="row no-gutters"
+        div class="row no-gutters pb-1"
             div class="col-12 col-md-7 dashboard_content-container--small-left" 
                 div class="dashboard_content-container"
                     = render 'dashboard/overview/hires/years-control'
@@ -16,6 +16,10 @@ div class="mb-4"
                 div class="dashboard_content-container"
                     = render 'dashboard/overview/hires/hires-stats-control'
                     = render 'dashboard/overview/hires/hires-stats'
+        div class="row no-gutters"
+            div class="col-12"
+                div class="dashboard_content-container"    
+                    = render 'dashboard/overview/hires/most-recent-hires'
                     
 
 div class="mb-4"
