--- a/app/assets/stylesheets/_charts.scss
+++ b/app/assets/stylesheets/_charts.scss
@@ -37,10 +37,13 @@
     width: 1rem;
     background-color: map-get($plated-secondary-palette, "peach-fuzz");
     border-radius: 50%;
+    opacity: .2;
+}
+
+.chart-status_bubble--active{
     animation-name: bubble;
     animation-duration: 1s;
-    animation-iteration-count: 4;
-    opacity: .2;
+    animation-iteration-count: infinite;
 }
 
 .chart-status_bubble-2{
