update graphs when offer v1 created or deleted

--- a/app/assets/stylesheets/_sidebar.scss
+++ b/app/assets/stylesheets/_sidebar.scss
@@ -24,6 +24,10 @@
     padding: 0
 }
 
+.sidebar_nav-links a{
+    color:white;
+}
+
 .sidebar_nav-link{
     text-transform: uppercase;
     letter-spacing: .2rem;
