--- a/app/views/dashboard/overview/index.html.slim
+++ b/app/views/dashboard/overview/index.html.slim
@@ -1,4 +1,4 @@
-div id="dashboard_overview_tab"
+div id="dashboard_overview-tab"
     div class="mb-4"
         div class="dashboard_content-header-container mb-1"
             h4 class="dashboard_content-header" Hires
