--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,7 +6,8 @@ html
     = csrf_meta_tag 
     = csp_meta_tag
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
-    = javascript_include_tag 'login', 'data-turbolinks-track': 'reload'
+    / = javascript_include_tag 'login', 'data-turbolinks-track': 'reload'
+    = javascript_include_tag 'login'
   body
     = yield
 
