--- a/app/views/layouts/dashboard.html.slim
+++ b/app/views/layouts/dashboard.html.slim
@@ -5,9 +5,10 @@ html
     meta name="viewport" content="width=devise-width, initial-scale=1.0"  
     = csrf_meta_tag 
     = csp_meta_tag
-    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
-    = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-    = stylesheet_link_tag 'https://use.fontawesome.com/releases/v5.1.0/css/all.css', integrity: 'sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt', crossorigin: 'anonymous'
+    / = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload
+    = stylesheet_link_tag 'application'
+    / = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+    = javascript_include_tag 'application'
     = javascript_include_tag 'https://js.pusher.com/4.1/pusher.min.js'
   body
     
