--- a/app/views/dashboard/overview/hires/_most-recent-hires.html.slim
+++ b/app/views/dashboard/overview/hires/_most-recent-hires.html.slim
@@ -1,29 +1,29 @@
 <i class="material-icons charts_info-tooltip" data-toggle="tooltip" data-placement="right" title="Most recent hires.">help_outline</i>
 div class="recent-hire_table-header mb-2"
-    div class="container"
+    div class="container-fluid"
         div class="row"
-            div class="col-2 col-md-1 col-lg-1"
-            div class="col-5 col-md-4 col-lg-3"
+            div class="col-md-1 col-lg-1 table-column_sm"
+            div class="col-6 col-md-4 col-lg-3"
                 p class="recent-hire_table-column-name" name
-            div class="col-5 col-md-4 col-lg-3"
+            div class="col-6 col-md-4 col-lg-3"
                 p class="recent-hire_table-column-name" job
-            div class="col-md-3 col-lg-3 table-column_md"
-                p class="recent-hire_table-column-name table-column_md" guild
+            div class="col-md-3 col-lg-3 table-column_sm"
+                p class="recent-hire_table-column-name table-column_sm" guild
             div class="col-lg-2 table-column_lg"
                 p class="recent-hire_table-column-name table-column_lg" hire date
 
 - recent_hires.each do |hire|
     div class="recent-hire_info-container mb-1"
-        div class="container"
+        div class="container-fluid"
             div class="row"
-                div class="col-2 col-md-1 col-lg-1 d-flex align-items-center"
-                    <i class="material-icons recent-hire_icon">perm_identity</i>
-                div class="col-5 col-md-4 col-lg-3 d-flex align-items-center"
+                div class="col-md-1 col-lg-1 d-flex align-items-center justify-content-center table-column_sm"
+                    <i class="material-icons recent-hire_icon table-column_sm">perm_identity</i>
+                div class="col-6 col-md-4 col-lg-3 d-flex align-items-center"
                     p class="recent-hire_info" #{hire['hire_name']}
-                div class="col-5 col-md-4 col-lg-3 d-flex align-items-center"
+                div class="col-6 col-md-4 col-lg-3 d-flex align-items-center"
                     p class="recent-hire_info" #{hire['job']}
-                div class="col-md-3 col-lg-3 d-flex align-items-center table-column_md"
-                    p class="recent-hire_info table-column_md" #{hire['guild']}
+                div class="col-md-3 col-lg-3 d-flex align-items-center table-column_sm"
+                    p class="recent-hire_info table-column_sm" #{hire['guild']}
                 div class="col-lg-2 d-flex align-items-center table-column_lg"
                     p class="recent-hire_info table-column_lg" #{hire['hire_date']}
 
