disable apply button on forms when charts are updating

--- a/app/views/dashboard/overview/hires/_years-control.html.slim
+++ b/app/views/dashboard/overview/hires/_years-control.html.slim
@@ -13,5 +13,5 @@ form id="years-hires_form"
                                 div class="custom-control custom-checkbox"
                                     input type="checkbox" class="custom-control-input" value="#{year}" id="#{year}-1" name="years[]" checked=true
                                     label class="custom-control-label" for="#{year}-1" #{year}
-                div id="years-hires_submit" 
-                    button type="submit" class="btn btn-primary button--submit ml-2" Apply
+                div  
+                    button type="submit" id="years-hires_submit" class="btn btn-primary button--submit ml-2" Apply
