--- a/app/views/dashboard/overview/offers/_offer-acceptance-ratios-control.html.slim
+++ b/app/views/dashboard/overview/offers/_offer-acceptance-ratios-control.html.slim
@@ -12,5 +12,5 @@ form id="offer-acceptance-ratios_form"
                                 div class="custom-control custom-checkbox"
                                     input type="checkbox" class="custom-control-input" value="#{year}" id="#{year}-5" name="years[]" checked=true
                                     label class="custom-control-label" for="#{year}-5" #{year}
-                div id="offer-acceptance-ratios_submit"
-                    button type="submit" class="btn btn-primary button--submit ml-2" Apply
+                div 
+                    button type="submit" id="offer-acceptance-ratios_submit" class="btn btn-primary button--submit ml-2" Apply
