--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,8 +5,7 @@ html
     meta name="viewport" content="width=devise-width, initial-scale=1.0" 
     = csrf_meta_tag 
     = csp_meta_tag
-    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
-    / = javascript_include_tag 'login', 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag 'application', media: 'all'
     = javascript_include_tag 'login'
   body
     = yield
