--- a/app/views/layouts/dashboard.html.slim
+++ b/app/views/layouts/dashboard.html.slim
@@ -5,9 +5,7 @@ html
     meta name="viewport" content="width=devise-width, initial-scale=1.0"  
     = csrf_meta_tag 
     = csp_meta_tag
-    / = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload
-    = stylesheet_link_tag 'application'
-    / = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag 'application', media: 'all'
     = javascript_include_tag 'application'
     = javascript_include_tag 'https://js.pusher.com/4.1/pusher.min.js'
   body
