--- a/app/views/shared/_sidebar.html.slim
+++ b/app/views/shared/_sidebar.html.slim
@@ -2,7 +2,7 @@ nav id="sidebar"
     div
         h1 id="sidebar_title" Tad.
     = tabs_tag open_tabs: {class: 'sidebar_nav-links'} do |tab|
-        = tab.overview 'Overview', dashboard_overview_path, class: 'sidebar_nav-link', "data-turbolinks" => "false"
-        = tab.guilds 'Guilds', dashboard_guilds_path, class: 'sidebar_nav-link', "data-turbolinks" => "false"
+        = tab.overview 'Overview', dashboard_overview_path, class: 'sidebar_nav-link'
+        = tab.guilds 'Guilds', dashboard_guilds_path, class: 'sidebar_nav-link'
         = button_to "Log out", {action: 'destroy', controller: 'devise/sessions'}, {class: 'sidebar_signout', method: :delete}
     
