--- a/app/views/dashboard/overview/hires/_most-recent-hires.html.slim
+++ b/app/views/dashboard/overview/hires/_most-recent-hires.html.slim
@@ -12,20 +12,21 @@ div class="recent-hire_table-header mb-2"
             div class="col-lg-2 table-column_lg"
                 p class="recent-hire_table-column-name table-column_lg" hire date
 
-- recent_hires.each do |hire|
-    div class="recent-hire_info-container mb-1"
-        div class="container-fluid"
-            div class="row"
-                div class="col-md-1 col-lg-1 d-flex align-items-center justify-content-center table-column_sm"
-                    <i class="material-icons recent-hire_icon table-column_sm">perm_identity</i>
-                div class="col-6 col-md-4 col-lg-3 d-flex align-items-center"
-                    p class="recent-hire_info" #{hire['hire_name']}
-                div class="col-6 col-md-4 col-lg-3 d-flex align-items-center"
-                    p class="recent-hire_info" #{hire['job']}
-                div class="col-md-3 col-lg-3 d-flex align-items-center table-column_sm"
-                    p class="recent-hire_info table-column_sm" #{hire['guild']}
-                div class="col-lg-2 d-flex align-items-center table-column_lg"
-                    p class="recent-hire_info table-column_lg" #{hire['hire_date']}
+div id="recent-hires_rows"
+    - recent_hires.each do |hire|
+        div class="recent-hire_info-container mb-1" data-candidate-id="#{hire['candidate_id']}"
+            div class="container-fluid"
+                div class="row"
+                    div class="col-md-1 col-lg-1 d-flex align-items-center justify-content-center table-column_sm"
+                        <i class="material-icons recent-hire_icon table-column_sm">perm_identity</i>
+                    div class="col-6 col-md-4 col-lg-3 d-flex align-items-center"
+                        p class="recent-hire_info" #{hire['hire_name']}
+                    div class="col-6 col-md-4 col-lg-3 d-flex align-items-center"
+                        p class="recent-hire_info" #{hire['job']}
+                    div class="col-md-3 col-lg-3 d-flex align-items-center table-column_sm"
+                        p class="recent-hire_info table-column_sm" #{hire['guild']}
+                    div class="col-lg-2 d-flex align-items-center table-column_lg"
+                        p class="recent-hire_info table-column_lg" #{hire['hire_date']}
 
 div class="chart-status_bubbles" id="chart-status_hires-years"
     div class="chart-status_bubble chart-status_bubble-1"
