highlight active tab

--- a/app/assets/stylesheets/_custom.scss
+++ b/app/assets/stylesheets/_custom.scss
@@ -35,3 +35,7 @@ $alert-border-radius: 0;
 $input-border-radius: 0;
 $input-border-color: #dee2e6;
 $font-weight-normal: 350;
+
+a{
+    text-decoration: none !important; 
+}
