add sub-tab functionality

--- a/app/assets/stylesheets/_charts.scss
+++ b/app/assets/stylesheets/_charts.scss
@@ -1,5 +1,6 @@
 .charts_date{
-    background-color: map-get($plated-secondary-palette, "blueberry-pie");
+    background-color: map-get($plated-primary-palette, "charcoal");
+    // background-color: map-get($plated-secondary-palette, "blueberry-pie");
     color: white;
     padding: .5rem;
     text-align: center;
