--- a/app/assets/stylesheets/_dashboard.scss
+++ b/app/assets/stylesheets/_dashboard.scss
@@ -27,7 +27,7 @@
 .dashboard_content-header-container{
     background-color: map-get($plated-primary-palette, 'white');
     padding: 1.5rem 2rem;
-    border-top: 4px solid map-get($plated-secondary-palette, "peach-fuzz");
+    border-top: .4rem solid map-get($plated-secondary-palette, "peach-fuzz");
 }
 
 .dashboard_content-header{
@@ -40,11 +40,17 @@
     padding-bottom: 0 !important; 
 }
 
-.dashboard_month-dropdown{
-    // height: 12rem;
-    // overflow: scroll;
+.dashboard_focal-content-container{
+    background-color: white; 
+    border-top: .5rem solid map-get($plated-secondary-palette, "peach-fuzz");
+    padding: 1.5rem 2rem;
+    height: 100%;
 }
 
+.dashboard_focal-content-header{
+    font-weight: 600 !important;
+    margin-bottom: 2rem;
+}
 
 // hide sidebar, expand content area, and show menu toggle button
 @include media-breakpoint-down(md){
