--- a/app/views/dashboard/guilds/index.html.slim
+++ b/app/views/dashboard/guilds/index.html.slim
@@ -1,2 +1,44 @@
 div id="dashboard_guilds-tab"
-    a href="/dashboard/guilds/technology" Tech
+    div class="guilds-tab_header-container"
+        h3 class="dashboard_content-header" Guilds overview
+    div class="container-fluid px-0"
+        div class="row no-gutters"
+            div class="col-4"
+                div class="dashboard_focal-content-container"
+                    h4 class="dashboard_focal-content-header" Guilds
+                    div class="guilds-tab_guilds-list"
+                        div class="guilds-tab_guilds-list-item mb-1" 
+                            <i class="material-icons hires-stats_icon">color_lens</i>
+                            p Creative
+                        div class="guilds-tab_guilds-list-item mb-1"
+                            <i class="material-icons hires-stats_icon">timeline</i>
+                            p Data Science
+                        div class="guilds-tab_guilds-list-item mb-1" 
+                            <i class="material-icons hires-stats_icon">face</i>
+                            p CX
+                        div class="guilds-tab_guilds-list-item mb-1" 
+                            <i class="material-icons hires-stats_icon">gavel</i>
+                            p Legal
+                        div class="guilds-tab_guilds-list-item mb-1" 
+                            <i class="material-icons hires-stats_icon">attach_money</i>
+                            p Finance
+                        div class="guilds-tab_guilds-list-item mb-1" 
+                            <i class="material-icons hires-stats_icon">code</i>
+                            p Technology
+                        div class="guilds-tab_guilds-list-item mb-1" 
+                            <i class="material-icons hires-stats_icon">people</i>
+                            p People
+                        div class="guilds-tab_guilds-list-item mb-1" 
+                            <i class="material-icons hires-stats_icon">web</i>
+                            p Product
+                        div class="guilds-tab_guilds-list-item mb-1" 
+                            <i class="material-icons hires-stats_icon">restaurant</i>
+                            p Culinary
+                        div class="guilds-tab_guilds-list-item mb-1" 
+                            <i class="material-icons hires-stats_icon">layers</i>
+                            p Operations
+                        div class="guilds-tab_guilds-list-item mb-1" 
+                            <i class="material-icons hires-stats_icon">data_usage</i>
+                            p Marketing
+    div      
+        = link_to 'Technology', dashboard_guilds_technology_path
