--- a/app/views/dashboard/guilds/index.html.slim
+++ b/app/views/dashboard/guilds/index.html.slim
@@ -7,38 +7,36 @@ div id="dashboard_guilds-tab"
                 div class="dashboard_focal-content-container"
                     h4 class="dashboard_focal-content-header" Guilds
                     div class="guilds-tab_guilds-list"
-                        div class="guilds-tab_guilds-list-item mb-1" 
-                            <i class="material-icons hires-stats_icon">color_lens</i>
+                        div class="guilds-list-item mb-2" 
+                            <i class="material-icons guild-list-item_icon">color_lens</i>
                             p Creative
-                        div class="guilds-tab_guilds-list-item mb-1"
-                            <i class="material-icons hires-stats_icon">timeline</i>
-                            p Data Science
-                        div class="guilds-tab_guilds-list-item mb-1" 
-                            <i class="material-icons hires-stats_icon">face</i>
-                            p CX
-                        div class="guilds-tab_guilds-list-item mb-1" 
-                            <i class="material-icons hires-stats_icon">gavel</i>
-                            p Legal
-                        div class="guilds-tab_guilds-list-item mb-1" 
-                            <i class="material-icons hires-stats_icon">attach_money</i>
-                            p Finance
-                        div class="guilds-tab_guilds-list-item mb-1" 
-                            <i class="material-icons hires-stats_icon">code</i>
-                            p Technology
-                        div class="guilds-tab_guilds-list-item mb-1" 
-                            <i class="material-icons hires-stats_icon">people</i>
-                            p People
-                        div class="guilds-tab_guilds-list-item mb-1" 
-                            <i class="material-icons hires-stats_icon">web</i>
-                            p Product
-                        div class="guilds-tab_guilds-list-item mb-1" 
-                            <i class="material-icons hires-stats_icon">restaurant</i>
+                        div class="guilds-list-item mb-2" 
+                            <i class="material-icons guild-list-item_icon">restaurant</i>
                             p Culinary
-                        div class="guilds-tab_guilds-list-item mb-1" 
-                            <i class="material-icons hires-stats_icon">layers</i>
-                            p Operations
-                        div class="guilds-tab_guilds-list-item mb-1" 
-                            <i class="material-icons hires-stats_icon">data_usage</i>
+                        div class="guilds-list-item mb-2" 
+                            <i class="material-icons guild-list-item_icon">face</i>
+                            p CX
+                        div class="guilds-list-item mb-2"
+                            <i class="material-icons guild-list-item_icon">timeline</i>
+                            p Data Science
+                        div class="guilds-list-item mb-2" 
+                            <i class="material-icons guild-list-item_icon">attach_money</i>
+                            p Finance
+                        div class="guilds-list-item mb-2" 
+                            <i class="material-icons guild-list-item_icon">gavel</i>
+                            p Legal
+                        div class="guilds-list-item mb-2" 
+                            <i class="material-icons guild-list-item_icon">data_usage</i>
                             p Marketing
-    div      
-        = link_to 'Technology', dashboard_guilds_technology_path
+                        div class="guilds-list-item mb-2" 
+                            <i class="material-icons guild-list-item_icon">layers</i>
+                            p Operations
+                        div class="guilds-list-item mb-2" 
+                            <i class="material-icons guild-list-item_icon">people</i>
+                            p People
+                        div class="guilds-list-item mb-2" 
+                            <i class="material-icons guild-list-item_icon">web</i>
+                            p Product
+                        div class="guilds-list-item mb-2" 
+                            <i class="material-icons guild-list-item_icon">code</i>
+                            p Technology
