--- a/app/assets/stylesheets/_dashboard.scss
+++ b/app/assets/stylesheets/_dashboard.scss
@@ -48,8 +48,9 @@
 }
 
 .dashboard_focal-content-header{
-    font-weight: 600 !important;
+    font-weight: 500 !important;
     margin-bottom: 2rem;
+    font-size: 1.5rem !important
 }
 
 // hide sidebar, expand content area, and show menu toggle button
