--- a/app/views/dashboard/guilds/index.html.slim
+++ b/app/views/dashboard/guilds/index.html.slim
@@ -3,7 +3,7 @@ div id="dashboard_guilds-tab"
         h3 class="dashboard_content-header" Guilds overview
     div class="container-fluid px-0"
         div class="row no-gutters"
-            div class="col-4"
+            div class="col-4 dashboard_content-container--focal-left"
                 div class="dashboard_focal-content-container"
                     h4 class="dashboard_focal-content-header" Guilds
                     div class="guilds-tab_guilds-list"
@@ -40,3 +40,7 @@ div id="dashboard_guilds-tab"
                         div class="guilds-list-item mb-2" 
                             <i class="material-icons guild-list-item_icon">code</i>
                             p Technology
+            div class="col-8"
+                div class="dashboard_focal-content-container"
+                    h4 class="dashboard_focal-content-header" Hires
+
