make hires by guild control component functional

--- a/app/views/dashboard/guilds/index.html.slim
+++ b/app/views/dashboard/guilds/index.html.slim
@@ -11,4 +11,5 @@ div id="dashboard_guilds-tab"
                     h4 class="dashboard_focal-content-header" Hires by guild
                     = render 'dashboard/guilds/hires-by-guild-control'
                     = render 'dashboard/guilds/hires-by-guild'
+                    = render 'dashboard/guilds/hires-by-guild-date'
 
