make guild overview tab response

--- a/app/assets/stylesheets/_custom.scss
+++ b/app/assets/stylesheets/_custom.scss
@@ -35,6 +35,7 @@ $alert-border-radius: 0;
 $input-border-radius: 0;
 $input-border-color: #dee2e6;
 $font-weight-normal: 350;
+$grid-gutter-width: 1rem;
 
 a{
     text-decoration: none !important; 
