--- a/app/views/dashboard/guilds/index.html.slim
+++ b/app/views/dashboard/guilds/index.html.slim
@@ -3,10 +3,10 @@ div id="dashboard_guilds-tab"
         h3 class="dashboard_content-header" Guilds overview
     div class="container-fluid px-0"
         div class="row no-gutters"
-            div class="col-4 dashboard_content-container--focal-left"
+            div class="col-12 col-md-4 dashboard_content-container--focal-left"
                 div class="dashboard_focal-content-container"
                     = render 'dashboard/guilds/guilds-buttons-list'
-            div class="col-8"
+            div class="col-12 col-md-8"
                 div class="dashboard_focal-content-container" 
                     h4 class="dashboard_focal-content-header" Hires by guild
                     = render 'dashboard/guilds/hires-by-guild-control'
