--- a/app/views/dashboard/guilds/_guilds-buttons-list.html.slim
+++ b/app/views/dashboard/guilds/_guilds-buttons-list.html.slim
@@ -1,35 +1,39 @@
 h4 class="dashboard_focal-content-header" Guilds
 div class="guilds-tab_guilds-list"
-    div class="guilds-list-item mb-2" 
-        <i class="material-icons guild-list-item_icon">color_lens</i>
-        p Creative
-    div class="guilds-list-item mb-2" 
-        <i class="material-icons guild-list-item_icon">restaurant</i>
-        p Culinary
-    div class="guilds-list-item mb-2" 
-        <i class="material-icons guild-list-item_icon">face</i>
-        p CX
-    div class="guilds-list-item mb-2"
-        <i class="material-icons guild-list-item_icon">timeline</i>
-        p Data Science
-    div class="guilds-list-item mb-2" 
-        <i class="material-icons guild-list-item_icon">attach_money</i>
-        p Finance
-    div class="guilds-list-item mb-2" 
-        <i class="material-icons guild-list-item_icon">gavel</i>
-        p Legal
-    div class="guilds-list-item mb-2" 
-        <i class="material-icons guild-list-item_icon">data_usage</i>
-        p Marketing
-    div class="guilds-list-item mb-2" 
-        <i class="material-icons guild-list-item_icon">layers</i>
-        p Operations
-    div class="guilds-list-item mb-2" 
-        <i class="material-icons guild-list-item_icon">people</i>
-        p People
-    div class="guilds-list-item mb-2" 
-        <i class="material-icons guild-list-item_icon">web</i>
-        p Product
-    div class="guilds-list-item mb-2" 
-        <i class="material-icons guild-list-item_icon">code</i>
-        p Technology
+    div class="container-fluid px-0"
+        div class="row"
+            div class="col-12 col-sm-6 col-md-12"
+                div class="guilds-list-item mb-2" 
+                    <i class="material-icons guild-list-item_icon">color_lens</i>
+                    p Creative
+                div class="guilds-list-item mb-2" 
+                    <i class="material-icons guild-list-item_icon">restaurant</i>
+                    p Culinary
+                div class="guilds-list-item mb-2" 
+                    <i class="material-icons guild-list-item_icon">face</i>
+                    p CX
+                div class="guilds-list-item mb-2"
+                    <i class="material-icons guild-list-item_icon">timeline</i>
+                    p Data Science
+                div class="guilds-list-item mb-2" 
+                    <i class="material-icons guild-list-item_icon">attach_money</i>
+                    p Finance
+                div class="guilds-list-item mb-2" 
+                    <i class="material-icons guild-list-item_icon">gavel</i>
+                    p Legal
+            div class="col-12 col-sm-6 col-md-12"
+                div class="guilds-list-item mb-2" 
+                    <i class="material-icons guild-list-item_icon">data_usage</i>
+                    p Marketing
+                div class="guilds-list-item mb-2" 
+                    <i class="material-icons guild-list-item_icon">layers</i>
+                    p Operations
+                div class="guilds-list-item mb-2" 
+                    <i class="material-icons guild-list-item_icon">people</i>
+                    p People
+                div class="guilds-list-item mb-2" 
+                    <i class="material-icons guild-list-item_icon">web</i>
+                    p Product
+                div class="guilds-list-item mb-2" 
+                    <i class="material-icons guild-list-item_icon">code</i>
+                    p Technology
