--- a/app/views/dashboard/guilds/_hires-by-guild-date.html.slim
+++ b/app/views/dashboard/guilds/_hires-by-guild-date.html.slim
@@ -1,8 +1,8 @@
 p {
 class="mt-4 charts_date" 
 id="hires-by-guild_year" 
-data-date="#{offer_acceptance_ratio_data_for_year(current: true)[:date]}"
-} #{offer_acceptance_ratio_data_for_year(current: true)[:date]}
+data-date="#{Time.now().year}"
+} #{Time.now().year}
 
 div class="chart-status_bubbles" id="chart-status_hires-by-guild"
     div class="chart-status_bubble chart-status_bubble-1"
