--- a/app/assets/stylesheets/_guilds-tab.scss
+++ b/app/assets/stylesheets/_guilds-tab.scss
@@ -11,6 +11,7 @@
     padding: .8rem;
     align-items: center;
     border: .156rem solid #d3d3d3;
+    color: black;
     transition: border 150ms ease-in,
                 color 150ms ease-in ;
 }
@@ -18,6 +19,7 @@
 .guilds-list-item:hover{
     border: .156rem solid map-get($plated-primary-palette, 'charcoal');
     cursor: pointer;
+    color: black;
 }
 
 .guilds-list-item p{
@@ -25,7 +27,7 @@
 }
 
 .guilds-tab_guilds-list{
-    color:black;
+    // color:black !important;
 }
 .guild-list-item_icon{
     margin-right: 1.2rem;
