--- a/app/views/dashboard/guilds/individual-guild.html.slim
+++ b/app/views/dashboard/guilds/individual-guild.html.slim
@@ -1,4 +1,6 @@
-div id="dashboard_guilds_individual-page" data-guild="#{@current_guild}"
+div id="dashboard_individual-guild-page" data-guild="#{@current_guild}"
     div class="guilds-tab_header-container"
         h3 class="dashboard_content-header" #{@current_guild}
-    = link_to 'Back', dashboard_guilds_path
+    a href="/dashboard/guilds" class='guilds_back-button'
+        < guilds
+
