--- a/app/views/dashboard/guilds/individual-guild.html.slim
+++ b/app/views/dashboard/guilds/individual-guild.html.slim
@@ -5,15 +5,16 @@ div id="dashboard_individual-guild-page" data-guild="#{@current_guild}"
         a href="/dashboard/guilds" class='guilds_back-button' < guilds
     div class="mb-4"
         div class="dashboard_content-header-container mb-1"
-            h4 class="dashboard_content-header" Hires
+            h4 class="dashboard_content-header" Overview
         div class="container-fluid px-0"
             div class="row no-gutters pb-1"
                 div class="col-12 col-md-7 dashboard_content-container--small-left" 
-                    div class="dashboard_content-container"
-
-                div class="col-12 col-md-5"
-                    div class="dashboard_content-container"
+                    div class="dashboard_content-container" 
                         = render 'dashboard/guilds/shared/hires-per-year-control'
                         = render 'dashboard/guilds/shared/hires-per-year-graph'
+                div class="col-12 col-md-5"
+                    div class="dashboard_content-container"
+                        = render 'dashboard/guilds/shared/guild-jobs-stats'
+                        
     
 
