--- a/app/assets/stylesheets/_guilds-tab.scss
+++ b/app/assets/stylesheets/_guilds-tab.scss
@@ -30,24 +30,33 @@
     margin-right: 1.2rem;
 }
 
-.guild_back-botton-container{
-    padding: .5rem 0;
+.guild_back-button-container{
+    // padding: .5rem 0;
     margin-bottom: 1.4rem;
 }
 
 .guilds_back-button{
-    background-color: map-get($plated-secondary-palette, 'blueberry-pie');
-    padding: .6rem 1.4rem;
-    color: #f8f9fa;
-    text-transform: uppercase;
-    font-weight: 450;
-    letter-spacing: .1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: fit-content;
+    // background-color: map-get($plated-secondary-palette, 'blueberry-pie');
+    background-color: white;
+    padding: .3rem 1.4rem;
+    color: black;
+    // text-transform: uppercase;
+    font-weight: 500;
+    // letter-spacing: .1rem;
     margin-bottom: 2rem;
+}
+
+.guilds_back-button-icon{
+    font-size: 1.7rem;
 }
 
 .guilds_back-button:hover{
     color: white;
-    background-color: rgb(51, 157, 196);
+    background-color: black;
 }
 
 .guild-jobs-stats{
