--- a/app/views/dashboard/guilds/individual-guild.html.slim
+++ b/app/views/dashboard/guilds/individual-guild.html.slim
@@ -1,8 +1,9 @@
 div id="dashboard_individual-guild-page" data-guild="#{@current_guild}"
     div class="guilds-tab_header-container"
         h3 class="dashboard_content-header" #{@current_guild}
-    div class="guild_back-botton-container"
-        a href="/dashboard/guilds" class='guilds_back-button' < guilds
+    div class="guild_back-button-container"
+        a href="/dashboard/guilds" class='guilds_back-button' 
+            <i class="material-icons guilds_back-button-icon">keyboard_backspace</i>
     div class="mb-4"
         div class="dashboard_content-header-container mb-1"
             h4 class="dashboard_content-header" Overview
