--- a/app/views/dashboard/guilds/shared/_guild-jobs-stats.html.slim
+++ b/app/views/dashboard/guilds/shared/_guild-jobs-stats.html.slim
@@ -2,15 +2,7 @@ div class="guild-jobs-stats_container mb-1"
     div class="container-fluid mb-3 px-0"
         div class="row"
             div class="col-12 col-sm-2"
-                <i class="material-icons charts_info-tooltip" data-toggle="tooltip" data-placement="right" title="Guild jobs count.">help_outline</i>
-    div class="container-fluid mb-1 guild-jobs-stats"
-        div class="row"
-            div class="col-6"
-                div class="guild-jobs-stat_name"
-                    p open jobs 
-            div class="col-6"
-                div class="guild-jobs-stat_stat"
-                    p = 20 
+                <i class="material-icons charts_info-tooltip" data-toggle="tooltip" data-placement="right" title="Live jobs and openings">help_outline</i>
     div class="container-fluid mb-1 guild-jobs-stats"
         div class="row"
             div class="col-6"
@@ -23,7 +15,7 @@ div class="guild-jobs-stats_container mb-1"
         div class="row"
             div class="col-6"
                 div class="guild-jobs-stat_name"
-                    p openings 
+                    p live openings 
             div class="col-6"
                 div class="guild-jobs-stat_stat"
                     p = 20 
